crates/php-parser/tests/snapshots/integration__trait_unclosed_brace.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php trait A {} class C { use A { m as x; }

=== errors ===
expected '}', found end of file
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Trait": {
          "name": "A",
          "members": [],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 16
      }
    },
    {
      "kind": {
        "Class": {
          "name": "C",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "TraitUse": {
                  "traits": [
                    {
                      "parts": [
                        "A"
                      ],
                      "kind": "Unqualified",
                      "span": {
                        "start": 31,
                        "end": 33
                      }
                    }
                  ],
                  "adaptations": [
                    {
                      "kind": {
                        "Alias": {
                          "trait_name": null,
                          "method": "m",
                          "new_modifier": null,
                          "new_name": "x"
                        }
                      },
                      "span": {
                        "start": 35,
                        "end": 43
                      }
                    }
                  ]
                }
              },
              "span": {
                "start": 27,
                "end": 45
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 17,
        "end": 45
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 45
  }
}
